fix margins on mobile swap settings USD toggle

--- a/src/components/Global/DollarizationModalControl/DollarizationModalControl.module.css
+++ b/src/components/Global/DollarizationModalControl/DollarizationModalControl.module.css
@@ -7,5 +7,16 @@
     color: var(--text2);
     font-size: var(--body-size);
     line-height: var(--body-lh);
-   
+    margin: 1rem;
+}
+
+.main_container_mobile_chart {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+
+    color: var(--text2);
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
 }
